[package]
name = "leptos-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
thiserror = { workspace = true }
