[package]
name = "leptos-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
leptos = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = { workspace = true }
