[package]
name = "rustok-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI orchestration capability for RusToK"

[features]
default = []
server = [
  "dep:alloy",
  "dep:bytes",
  "dep:loco-rs",
  "dep:once_cell",
  "dep:rhai",
  "dep:rustok-ai-order",
  "dep:rustok-api",
  "dep:rustok-blog",
  "dep:rustok-commerce",
  "dep:rustok-core",
  "dep:rustok-media",
  "dep:rustok-mcp",
  "dep:rustok-storage",
  "dep:rustok-telemetry",
  "dep:schemars",
  "dep:sea-orm",
  "dep:tokio",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = { version = "1.0", optional = true }
chrono.workspace = true
alloy = { workspace = true, optional = true }
base64.workspace = true
loco-rs = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
futures-util = { version = "0.3" }
reqwest = { workspace = true, features = ["json", "stream"] }
rhai = { workspace = true, optional = true }
rustok-ai-order = { workspace = true, optional = true }
rustok-api = { workspace = true, optional = true }
rustok-blog = { workspace = true, optional = true }
rustok-commerce = { workspace = true, optional = true }
rustok-core = { workspace = true, optional = true }
rustok-media = { workspace = true, optional = true }
rustok-mcp = { workspace = true, optional = true }
rustok-storage = { workspace = true, optional = true }
rustok-telemetry = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing.workspace = true
uuid.workspace = true
