[package]
name = "rustok-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Auth module for RusTok — JWT, credentials, token lifecycle"

[dependencies]
rustok-core = { workspace = true }
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
password-hash.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
