[package]
name = "rustok-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cache module for RusTok — Redis connection lifecycle, backend factory, health checks"

[features]
default = ["redis-cache"]
redis-cache = ["rustok-core/redis-cache", "dep:redis"]

[dependencies]
rustok-core = { workspace = true }
async-trait.workspace = true
tracing.workspace = true
moka = { workspace = true, features = ["future"] }

# Optional Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
