[package]
name = "rustok-commerce"
version.workspace = true
edition.workspace = true

[dependencies]
rustok-core.workspace = true
async-trait.workspace = true
sea-orm-migration.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = ["uuid", "chrono", "decimal"] }
