[package]
name = "rustok-content"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-core.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
slug = "0.1"
utoipa = { workspace = true, features = ["uuid", "chrono"] }
thiserror.workspace = true
uuid.workspace = true
