[package]
name = "rustok-content"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-core.workspace = true
rustok-outbox.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
slug = "0.1"
tracing.workspace = true
utoipa = { workspace = true, features = ["uuid", "chrono"] }
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tokio.workspace = true
rustok-test-utils.workspace = true
