[package]
name = "rustok-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sea-orm.workspace = true
uuid.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
jsonwebtoken = "9"
once_cell = "1.19"
sea-orm-migration.workspace = true
rustok-telemetry.workspace = true
moka.workspace = true
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
redis-cache = ["redis"]

[dev-dependencies]
tokio.workspace = true
