[package]
name = "rustok-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sea-orm.workspace = true
uuid.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
utoipa.workspace = true
jsonwebtoken = "10.3.0"
argon2.workspace = true
once_cell = "1.19"
sea-orm-migration.workspace = true
rustok-telemetry.workspace = true
rustok-outbox.workspace = true
moka.workspace = true
alloy-scripting = { path = "../alloy-scripting" }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }
rhai = { version = "1.20", features = ["sync", "metadata"] }

[features]
redis-cache = ["redis"]

[dev-dependencies]
tokio.workspace = true
