[package]
name = "rustok-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
sea-orm.workspace = true
uuid.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
utoipa.workspace = true
jsonwebtoken = "10.3.0"
argon2.workspace = true
once_cell.workspace = true
regex = "1.10"
sea-orm-migration.workspace = true
rustok-telemetry.workspace = true
moka.workspace = true
alloy-scripting = { path = "../alloy-scripting" }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }
rhai = { version = "1.20", features = ["sync", "metadata"] }
url = "2.5"
futures = "0.3"
rand = "0.9"
serde_yaml = "0.9"
toml = "0.9"
hex = "0.4"
base64 = "0.22"

[features]
redis-cache = ["redis"]

[dev-dependencies]
tokio.workspace = true
rustok-outbox.workspace = true
futures = "0.3"
proptest = "1.5"
