[package]
name = "rustok-email"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Email module for RusTok — SMTP transport, templates"

[dependencies]
rustok-core = { workspace = true }
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
tera.workspace = true
serde_json.workspace = true

sea-orm-migration = { workspace = true }
