[package]
name = "rustok-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared event contracts for RusToK"
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
uuid.workspace = true
rustok-telemetry.workspace = true
