[package]
name = "rustok-iggy-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["thiserror"]
