[package]
name = "rustok-iggy-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[features]
default = []
# Enable Iggy SDK support (for full functionality)
iggy = ["dep:iggy"]

[dependencies.iggy]
version = "0.9.0"
optional = true

[package.metadata.cargo-udeps.ignore]
normal = ["thiserror"]
