[package]
name = "rustok-iggy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
bincode = "1.3.3"

rustok-core.workspace = true

iggy.workspace = true

[features]
default = ["remote"]
remote = []
embedded = []

[dev-dependencies]
tokio.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["anyhow", "iggy"]
