[package]
name = "rustok-iggy"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true

rustok-core.workspace = true
rustok-iggy-connector.workspace = true

[features]
default = []

[dev-dependencies]
tokio.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["anyhow"]
