[package]
name = "rustok-iggy"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

rustok-core.workspace = true
rustok-iggy-connector.workspace = true

[features]
default = []
iggy = ["rustok-iggy-connector/iggy"]

[dev-dependencies]
tokio.workspace = true
serde_yaml.workspace = true
