[package]
name = "rustok-index"
version.workspace = true
edition.workspace = true

[dependencies]
rustok-core.workspace = true
sea-orm.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
