[package]
name = "rustok-index"
version = "0.1.0"
edition = "2021"
description = "CQRS Read Model - Denormalized indexes for RusToK"

[dependencies]
rustok-core = { path = "../rustok-core" }

# Database
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Async
tokio = { version = "1", features = ["sync", "rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1"
