[package]
name = "rustok-index"
version.workspace = true
edition.workspace = true
description = "CQRS Read Model - Denormalized indexes for RusToK"
license.workspace = true

[dependencies]
rustok-core.workspace = true

# Database
sea-orm.workspace = true
sea-orm-migration.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
