[package]
name = "rustok-inventory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inventory domain module extracted from rustok-commerce"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
rustok-commerce-foundation.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
