[package]
name = "rustok-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "MCP adapter server for RusToK modules"

[dependencies]
anyhow.workspace = true
rmcp = { version = "0.14.0", features = ["macros", "server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
schemars = "1.2"
tokio.workspace = true
rustok-core.workspace = true

[dev-dependencies]
async-trait.workspace = true
sea-orm-migration.workspace = true
tokio.workspace = true
