[package]
name = "rustok-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "MCP adapter server for RusToK modules"

[dependencies]
anyhow.workspace = true
rmcp = { version = "0.16.0", features = ["macros", "server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
schemars = "1.2"
tokio.workspace = true
rustok-core.workspace = true
uuid.workspace = true
tracing.workspace = true
alloy-scripting = { path = "../alloy-scripting" }
rhai = { version = "1.20", features = ["sync", "metadata"] }

[dev-dependencies]
async-trait.workspace = true
sea-orm-migration.workspace = true
tokio.workspace = true
