[package]
name = "rustok-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "MCP adapter server for RusToK modules"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rmcp = { version = "1.7.0", features = ["macros", "server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
schemars = "1.2"
tokio.workspace = true
rustok-core.workspace = true
uuid.workspace = true
tracing.workspace = true
alloy = { path = "../alloy" }
rhai.workspace = true

[dev-dependencies]
sea-orm-migration.workspace = true
tokio.workspace = true
