[package]
name = "rustok-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media asset management for RusTok — uploads, metadata, translations"

[dependencies]
async-graphql.workspace = true
rustok-core.workspace = true
rustok-storage.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes = "1.0"
chrono.workspace = true
loco-rs.workspace = true
rustok-api = { workspace = true, features = ["server"] }
rustok-telemetry.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
mime_guess = "2.0"
