[package]
name = "rustok-outbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true

rustok-core.workspace = true
rustok-events.workspace = true

[dev-dependencies]
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
sea-orm-migration = { workspace = true, features = ["sqlx-sqlite"] }
