[package]
name = "rustok-pages"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
loco-rs.workspace = true
rustok-api = { workspace = true, features = ["loco-adapter"] }
rustok-channel.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-content.workspace = true
rustok-outbox.workspace = true
rustok-seo-targets.workspace = true
rustok-media.workspace = true
rustok-telemetry.workspace = true
rustok-tenant.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = ["uuid", "chrono"] }
uuid.workspace = true
url = "2.5"

[dev-dependencies]
rustok-test-utils.workspace = true
tokio.workspace = true
toml.workspace = true
