[package]
name = "rustok-product"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Product domain module extracted from rustok-commerce"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
rustok-commerce-foundation.workspace = true
rustok-seo-targets.workspace = true
rustok-media.workspace = true
flex.workspace = true
rustok-taxonomy.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
url = "2.5"
uuid.workspace = true
validator.workspace = true
